# postgres_w_airflow

./: .env  .gitignore  Dockerfile  docker-compose.local-db.yaml  docker-compose.yaml  how.txt  pyproject.toml
dags/: .env  article_authors-scheme.py  articles-scheme.py  chiefs-schema.py  conference-schema.py  conference_stats.py  events-schema.py  journal_issues-schema.py  journal_rubrics-schema.py  organizations-schema.py  organizations_stats.py  participants-schema.py  participants_stats.py  people-schema.py  people_stats.py  report_authors-schema.py  reports_schema.py  sections-schema.py  workers-schema.py  workers_stats.py
dags/conference/: data_extractors.py  steps.py
dags/organizations/: data_extractors.py  steps.py
dags/participants/: data_extractors.py  steps.py
dags/people/: data_extractors.py  steps.py
dags/workers/: data_extractors.py  steps.py
