[tool.poetry]
name = "postrges_w_airflow"
version = "0.1.0"
description = ""
authors = ["smynko <mynkosemen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.2.4"
apache-airflow-providers-postgres = "^4.0.1"
pandas = "^1.4.2"
XlsxWriter = "^3.0.3"
numpy = "^1.23.1"
apache-airflow-providers-telegram = "3.0.0"
clickhouse-driver = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
